--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "vite": "^5.2.0",
     "@vitejs/plugin-react": "^4.2.0",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "vite": "^5.2.0"
   }
 }
